# tenmado-load

./: .gcloudignore  .gitignore  README.md  cloudbuild.yaml  config.py  main.py  pyproject.toml  requirements.txt
modules/: weatherforcast.py
services/: weatherforcastservice.py
sqls/: fetch_meteorological_observatory_codes.sql
tableschemas/: t_fewdays_weather.json  t_past_precopitationavg.json  t_past_tempavg.json  t_tomorrow_pops.json  t_tomorrow_temps.json  t_week_temps.json  t_week_weather.json
utils/: bq.py  decorator.py  files.py  gcs.py  logger.py
yamls/: config.yaml
