[tool.poetry]
name = "tenmado-load"
version = "0.1.0"
description = ""
authors = ["杉本階嗣"]

[tool.poetry.dependencies]
python = "3.9.4"
requests = "^2.26.0"
numpy = "^1.21.3"
pandas = "^1.3.4"
google-cloud-storage = "^1.42.3"
google-cloud-bigquery = "^2.28.1"
Jinja2 = "^3.0.2"
google-cloud-core = "^2.1.0"
google-cloud-logging = "^2.6.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
